--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,14 @@
         "homepage": "http://adammckissock.com"
     }],
     "require": {
-        "php": ">=5.3.0",       
+        "php": ">=5.3.0",
         "guzzlehttp/guzzle": "~4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.7.*"
+    },
     "autoload": {
-        "psr-4": { "Crowd\\": "lib/Crowd-PHP/" }
+        "psr-4": { "Crowd\\": "src" }
     }
 }
+
