--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "phpunit/phpunit": "4.7.*"
     },
     "autoload": {
-        "psr-4": { "Crowd\\": "src" }
+        "psr-4": { "Crowd\\": "lib" }
     }
 }
 
